test/langtools/tools/javac/patterns/declarations/OverloadedPatternDeclarationErrors.out
OverloadedPatternDeclarationErrors.java:13:26: compiler.err.no.compatible.matcher.found: OverloadedPatternDeclarationErrors.D
OverloadedPatternDeclarationErrors.java:20:26: compiler.err.matcher.overloading.ambiguity: OverloadedPatternDeclarationErrors.D
OverloadedPatternDeclarationErrors.java:25:26: compiler.err.no.compatible.matcher.found.arity: OverloadedPatternDeclarationErrors.D, 3
- compiler.note.preview.filename: OverloadedPatternDeclarationErrors.java, DEFAULT
- compiler.note.preview.recompile
3 errors